--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <label for="service" class="form-label">نوع الخدمة المطلوبة</label>
         <select class="form-select" id="service" required>
           <option selected disabled>اختر نوع الخدمة</option>
-          <option>تصميم إعلان دورة تدريبية</option>
-          <option>تصميم بوستات لحسابات السوشيال ميديا</option>
+          <option>  تصميم إعلانات </option>
+          <option>  تصميم بوسترات  </option>
         </select>
       </div>
 
